--- a/kartvizit-app/angular.json
+++ b/kartvizit-app/angular.json
@@ -33,9 +33,12 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+               "./node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
