--- a/kartvizit-app/angular.json
+++ b/kartvizit-app/angular.json
@@ -31,11 +31,12 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.scss"
+             "styles": [
+             "@angular/material/prebuilt-themes/azure-blue.css",
+             "./node_modules/bootstrap/scss/bootstrap.scss",
+             "src/styles.scss"
             ],
+
             "scripts": [
                "./node_modules/bootstrap/dist/js/bootstrap.js"
             ]
